# UiO-IN3110.github.io

./: .flake8  .gitignore  .pre-commit-config.yaml  Gemfile  Makefile  README.md  Readme.md  _config.yml  _toc.yml  ideas.txt  index.css  index.html  index.md  index_2017.html  index_2018.html  index_2019.html  index_2020.html  pyproject.toml  requirements.txt  video_setup.md
.github/workflows/: build.yaml  deploy.yaml
assignments/: Contest results.ipynb  coloring_example.py  diabetes.csv  examples_5.py  examples_assignment_5.py  index.md  peer_review_instruction-4.md  peer_review_instructions.md  polynomials.py  pseudo_code_assignment_5_extract_tables.py
assignments/assignment1/: Makefile  assignment1.html  assignment1.md  problem_set_1.tex  solution_week_1.tex
assignments/assignment2/: assignment2.md  assignment2.tex  calc.sh  clock.sh  subway.sh
assignments/assignment3/: assignment3.md  assignment3.tex
assignments/assignment3/code/: profile-report.md  pyproject.toml  setup.py
assignments/assignment3/code/instapy/: __init__.py  __main__.py  cli.py  cython_filters.pyx  io.py  numba_filters.py  numpy_filters.py  profiling.py  python_filters.py  timing.py
assignments/assignment3/code/test/: conftest.py  test_cython.py  test_numba.py  test_numpy.py  test_package.py  test_python.py
assignments/assignment4/: Makefile  assignment4.md  assignment4.tex  test_slow_rectangle.py
assignments/assignment5/: Makefile  assignment5.md  assignment5.tex
book/: requirements.in  requirements.txt
lectures/: Peer-review information.ipynb  index.html
lectures/12-production/from-script-to-project/monty-hall-game4/: README.md  pyproject.toml  readthedocs.yml  setup.py
lectures/12-production/from-script-to-project/monty-hall-game4/docs/: conf.py  index.rst
lectures/12-production/from-script-to-project/monty-hall-game4/docs/api/: index.rst
lectures/12-production/from-script-to-project/monty-hall-game4/monty_hall_game/: cli.py  monty_hall_game.py  web.py
lectures/12-production/from-script-to-project/monty-hall-game4/monty_hall_game/templates/: final.html  layout7.html  select.html
lectures/production/from-script-to-project/monty-hall-game4/: .travis.yml  README.md  pyproject.toml  runtime.txt
lectures/production/from-script-to-project/monty-hall-game4/.github/workflows/: test.yml
lectures/production/from-script-to-project/monty-hall-game4/docs/: make.bat
lectures/production/from-script-to-project/monty-hall-game4/monty_hall_game/: cli.py  game_exceptions.py  monty_hall_game.py
lectures/production/from-script-to-project/monty-hall-game4/monty_hall_game/templates/: reselect.html
lectures/production/from-script-to-project/monty-hall-game4/tests/: test_game_module.py
lectures/production/sphinx-docs/package_to_document/: README.md  pyproject.toml
lectures/production/sphinx-docs/package_to_document/src/myarray/: __init__.py  myarray.py
lectures/python/examples/my-package/: LICENSE  README.md  pyproject.toml
lectures/python/examples/my-package/test/: test_printing.py
lectures_2017/: Untitled.ipynb
sphinxext/: copy_files.py
tools/: linkcheck.py
(+765 files in other folders)
