[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
version = "0.1.0"
requires-python = ">=3.7"
license = {text = "MIT License"}

name = "uio-monty-hall-game"
description = "..."
readme = "README.md"
dynamic = ["dependencies"]


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
monty-hall-cli = "monty_call_game.cli:main"
monty-hall-web = "monty_call_game.web:main"
